@@ -4,8 +4,6 @@
 package com.microsoft.typespec.http.client.generator.core.model.javamodel;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Consumer;
@@ -47,7 +45,7 @@ public class JavaFile implements JavaContext {
     }
 
     public final void publicFinalClass(String classDeclaration, Consumer<JavaClass> classAction) {
-        publicClass(Collections.singletonList(JavaModifier.Final), classDeclaration, classAction);
+        publicClass(List.of(JavaModifier.Final), classDeclaration, classAction);
     }
 
     public final void publicClass(List<JavaModifier> modifiers, String classDeclaration,
@@ -74,7 +72,7 @@ public class JavaFile implements JavaContext {
     }
 
     public final void declareImport(String... imports) {
-        declareImport(Arrays.asList(imports));
+        declareImport(List.of(imports));
     }
 
     public final void declareImport(Set<String> imports) {
